添加权限节点并修复了Bug - 添加管理权限节点 - 添加忽略生物蛋限制节点 - 修复左键刷怪笼显示不能使用生物蛋的Bug

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,86 +1,84 @@
 
 #Config version identifier
 config-version: 1
-#Permission Switch
-enable-permission: true
 #Language
 lang: "en"
 
 allowed-mobs:
-  - allay
-  - axolotl
-  - bat
-  - bee
-  - blaze
-  - cat
-  - camel
-  - cave-spider
-  - chicken
-  - cod
-  - cow
-  - creeper
-  - dolphin
-  - donkey
-  - drowned
-  - elder-guardian
-  - ender-dragon
-  - enderman
-  - endermite
-  - evoker
-  - fox
-  - frog
-  - ghast
-  - glow-squid
-  - goat
-  - guardian
-  - hoglins
-  - horse
-  - husk
-  - iron-golem
-  - llama
-  - magma-cube
-  - mooshroom
-  - mule
-  - ocelot
-  - panda
-  - parrot
-  - phantom
-  - pig
-  - piglin
-  - piglin-brute
-  - pillager
-  - polar-bear
-  - pufferfish
-  - rabbit
-  - ravager
-  - salmon
-  - sheep
-  - shulker
-  - silverfish
-  - skeleton
-  - skeleton-horse
-  - slime
-  - sniffer
-  - snow-golem
-  - spider
-  - squid
-  - stray
-  - strider
-  - tadpole
-  - trader-llama
-  - tropical-fish
-  - turtle
-  - vex
-  - villager
-  - vindicator
-  - wandering-trader
-  - warden
-  - witch
-  - wither
-  - wither-skeleton
-  - wolf
-  - zoglin
-  - zombie
-  - zombie-horse
-  - zombie-villager
-  - zombified-piglin
+  allay: true
+  axolotl: true
+  bat: true
+  bee: true
+  blaze: true
+  cat: true
+  camel: true
+  cave-spider: true
+  chicken: true
+  cod: true
+  cow: true
+  creeper: true
+  dolphin: true
+  donkey: true
+  drowned: true
+  elder-guardian: true
+  ender-dragon: true
+  enderman: true
+  endermite: true
+  evoker: true
+  fox: true
+  frog: true
+  ghast: true
+  glow-squid: true
+  goat: true
+  guardian: true
+  hoglins: true
+  horse: true
+  husk: true
+  iron-golem: true
+  llama: true
+  magma-cube: true
+  mooshroom: true
+  mule: true
+  ocelot: true
+  panda: true
+  parrot: true
+  phantom: true
+  pig: true
+  piglin: true
+  piglin-brute: true
+  pillager: true
+  polar-bear: true
+  pufferfish: true
+  rabbit: true
+  ravager: true
+  salmon: true
+  sheep: true
+  shulker: true
+  silverfish: true
+  skeleton: true
+  skeleton-horse: true
+  slime: true
+  sniffer: true
+  snow-golem: true
+  spider: true
+  squid: true
+  stray: true
+  strider: true
+  tadpole: true
+  trader-llama: true
+  tropical-fish: true
+  turtle: true
+  vex: true
+  villager: true
+  vindicator: true
+  wandering-trader: true
+  warden: true
+  witch: true
+  wither: true
+  wither-skeleton: true
+  wolf: true
+  zoglin: true
+  zombie: true
+  zombie-horse: true
+  zombie-villager: true
+  zombified-piglin: true
