--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,20 @@
 name: SpawnerManager
 main: me.henrydhc.spawnermanager.SpawnerManager
-version: 1.0-SNAPSHOT
+version: 1.1.0-ALPHA
 api-version: 1.20
 description: Control players' access to spawners.
 permissions:
   use:
     description: Allows player to interact with spawners.
+    default: true
+  reload:
+    description: Allows user to reload the plugin
+    default: op
+  bypass:
+    description: Allow user to bypass spawner restriction.
     default: false
-  admin:
-    description: Allows user to execute admin commands
+  set:
+    description: Allow user to set whether a mob egg can be used on spawner
     default: op
 
 commands:
@@ -16,5 +22,4 @@ commands:
     aliases:
       - sm
     usage: /spawnermanager <options>
-    permission: admin
     permission-message: You don't have permission to execute this command!
