--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.henrydhc</groupId>
-    <artifactId>MobSpawnerManager</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>SpawnerManager</artifactId>
+    <version>1.1.0-Beta</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
