--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SpawnerManager
 main: me.henrydhc.spawnermanager.SpawnerManager
-version: 1.1.0-BETA
+version: 1.2.0
 api-version: 1.20
 description: Control players' access to spawners.
 permissions:
