--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: SpawnerManager
 main: me.henrydhc.spawnermanager.SpawnerManager
-version: 1.2.0
-api-version: 1.20
+version: 1.1.1-SNAPSHOT
+api-version: 1.14
 description: Control players' access to spawners.
 permissions:
   use:
