--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.henrydhc.spawnermanager</groupId>
     <artifactId>SpawnerManager</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
