--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SpawnerManager
 main: me.henrydhc.spawnermanager.SpawnerManager
-version: 1.1.1-SNAPSHOT
+version: 1.1.1
 api-version: 1.14
 description: Control players' access to spawners.
 permissions:
